mem map for linux

--- a/doc/latex/md_CHANGELOG.tex
+++ b/doc/latex/md_CHANGELOG.tex
@@ -6,18 +6,23 @@ The format is based on \href{http://keepachangelog.com/}{\texttt{ Keep a Changel
 \begin{DoxyItemize}
 \item Makefile config file
 \item Doxygen config file
+\item Mac\+OS compatibility T\+O\+DO
+\item Support for folders T\+O\+DO
 \end{DoxyItemize}\hypertarget{md_CHANGELOG_autotoc_md3}{}\doxysubsection{Fixed}\label{md_CHANGELOG_autotoc_md3}
 
 \begin{DoxyItemize}
 \item Not outputing bug fixed
 \item Copyrights fixed
 \item Discord tag updated
+\item Windows compatibility T\+O\+DO
 \end{DoxyItemize}\hypertarget{md_CHANGELOG_autotoc_md4}{}\doxysubsection{Changed}\label{md_CHANGELOG_autotoc_md4}
 
 \begin{DoxyItemize}
 \item arguments convertition updated
 \item Errors go to stderr buffer
 \item Documentation updated
+\item Threads resources management T\+O\+DO
+\item Files writing method T\+O\+DO
 \end{DoxyItemize}\hypertarget{md_CHANGELOG_autotoc_md5}{}\doxysection{\mbox{[}v1.\+2\mbox{]} -\/ 2018-\/12-\/11}\label{md_CHANGELOG_autotoc_md5}
 \hypertarget{md_CHANGELOG_autotoc_md6}{}\doxysubsection{Added}\label{md_CHANGELOG_autotoc_md6}
 
